; ModuleID = '/home/carl/AnghaBench/libevent/extr_evutil.c_evutil_make_socket_nonblocking.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_evutil.c_evutil_make_socket_nonblocking.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@F_GETFL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"fcntl(%d, F_GETFL)\00", align 1
@O_NONBLOCK = common dso_local global i32 0, align 4
@F_SETFL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"fcntl(%d, F_SETFL)\00", align 1
@FIONBIO = common dso_local global i32 0, align 4
@SOCKET_ERROR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evutil_make_socket_nonblocking(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i32, i32* @F_GETFL, align 4
  %7 = call i32 @fcntl(i64 %5, i32 %6, i32 0)
  store i32 %7, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @event_warn(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i64 %10)
  store i32 -1, i32* %2, align 4
  br label %30

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @O_NONBLOCK, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %29, label %17

17:                                               ; preds = %12
  %18 = load i64, i64* %3, align 8
  %19 = load i32, i32* @F_SETFL, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @O_NONBLOCK, align 4
  %22 = or i32 %20, %21
  %23 = call i32 @fcntl(i64 %18, i32 %19, i32 %22)
  %24 = icmp eq i32 %23, -1
  br i1 %24, label %25, label %28

25:                                               ; preds = %17
  %26 = load i64, i64* %3, align 8
  %27 = call i32 @event_warn(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i64 %26)
  store i32 -1, i32* %2, align 4
  br label %30

28:                                               ; preds = %17
  br label %29

29:                                               ; preds = %28, %12
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %25, %9
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @fcntl(i64, i32, i32) #1

declare dso_local i32 @event_warn(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
